WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48141
[Qt][QtTestBrowser] Toggle use of QGraphicsView messes up the menu
https://bugs.webkit.org/show_bug.cgi?id=48141
Summary
[Qt][QtTestBrowser] Toggle use of QGraphicsView messes up the menu
Yi Shen
Reported
2010-10-22 10:53:20 PDT
Steps to reproduce 1. launch QtTestBrowser 2. check the 'edit' menu on the menu bar, you can see several menu items, like 'undo','redo','cut' ... 3. on the menu bar, check 'Develop'->'QGraphicsView'->'Toggle use of QGraphicsView' 4. check the 'edit' menu again Result, menu items are missing Excepted, No menu items missing
Attachments
first try
(3.35 KB, patch)
2010-10-22 10:59 PDT
,
Yi Shen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yi Shen
Comment 1
2010-10-22 10:59:49 PDT
Created
attachment 71577
[details]
first try Need to create/reconnect menu items with the new qwebpage.
Andreas Kling
Comment 2
2010-10-24 05:16:41 PDT
Comment on
attachment 71577
[details]
first try Nice, r=me!
WebKit Commit Bot
Comment 3
2010-10-24 09:59:49 PDT
Comment on
attachment 71577
[details]
first try Clearing flags on attachment: 71577 Committed
r70417
: <
http://trac.webkit.org/changeset/70417
>
WebKit Commit Bot
Comment 4
2010-10-24 09:59:54 PDT
All reviewed patches have been landed. Closing bug.
Suresh Voruganti
Comment 5
2010-11-02 10:25:54 PDT
Please cherry pick the fix to Qtwebkit 2.1 branch
Ademar Reis
Comment 6
2010-11-09 09:58:29 PST
Revision
r70417
cherry-picked into qtwebkit-2.1 with commit ee16ad6 <
http://gitorious.org/webkit/qtwebkit/commit/ee16ad6
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug