2010-10-24  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Andreas Kling.

        [Qt][QtTestBrowser] Toggle use of QGraphicsView messes up the menu
        https://bugs.webkit.org/show_bug.cgi?id=48141

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::init):
        (LauncherWindow::initializeView):
        (LauncherWindow::toggleWebView):

Canonical link: https://commits.webkit.org/60954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70417 268f45cc-cd09-0410-ab3c-d52691b4dbfc